Closed Bug 1812033 Opened 3 years ago Closed 3 years ago

Intermittent Assertion failure: !existingEntry == !existingLoadingInfo, at /builds/worker/checkouts/gecko/docshell/base/CanonicalBrowsingContext.cpp:568

Categories

(Core :: DOM: Navigation, defect)

defect

Tracking

()

RESOLVED FIXED
112 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox110 --- unaffected
firefox111 --- unaffected
firefox112 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: peterv)

References

(Regression)

Details

(Keywords: assertion, intermittent-failure, regression)

Attachments

(1 file)

Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=403372905&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/D3XrdDOIQo2-wDQ7ExXdLA/runs/0/artifacts/public/logs/live_backing.log


INFO - TEST-OK | docshell/test/navigation/test_bug1750973.html | took 658ms
[task 2023-01-24T12:33:57.151Z] 12:33:57     INFO - TEST-START | docshell/test/navigation/test_bug1758664.html
[task 2023-01-24T12:33:57.570Z] 12:33:57     INFO - GECKO(1565) | [Parent 1565, Main Thread] WARNING: NS_ENSURE_TRUE(she && she->mInfo->mSharedState.Get()) failed: file /builds/worker/checkouts/gecko/docshell/shistory/SessionHistoryEntry.cpp:1149
[task 2023-01-24T12:33:57.746Z] 12:33:57     INFO - GECKO(1565) | [Child 1745, Main Thread] WARNING: Not resolving response 'PDocumentChannel::Reply_RedirectToRealChannel': actor is dead: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:792
[task 2023-01-24T12:33:57.750Z] 12:33:57     INFO - GECKO(1565) | Assertion failure: !existingEntry == !existingLoadingInfo, at /builds/worker/checkouts/gecko/docshell/base/CanonicalBrowsingContext.cpp:568
[task 2023-01-24T12:33:57.753Z] 12:33:57     INFO -  Initializing stack-fixing for the first stack frame, this may take a while...
[task 2023-01-24T12:34:07.295Z] 12:34:07     INFO - GECKO(1565) | #01: mozilla::dom::CanonicalBrowsingContext::CreateLoadingSessionHistoryEntryForLoad(nsDocShellLoadState*, mozilla::dom::SessionHistoryEntry*, nsIChannel*) [docshell/base/CanonicalBrowsingContext.cpp:568]
[task 2023-01-24T12:34:07.299Z] 12:34:07     INFO - GECKO(1565) | #02: mozilla::net::DocumentLoadListener::Open(nsDocShellLoadState*, mozilla::net::LoadInfo*, unsigned int, unsigned int, mozilla::Maybe<unsigned long> const&, mozilla::TimeStamp const&, nsDOMNavigationTiming*, mozilla::Maybe<mozilla::dom::ClientInfo>&&, bool, mozilla::dom::ContentParent*, nsresult*) [netwerk/ipc/DocumentLoadListener.cpp:722]
[task 2023-01-24T12:34:07.300Z] 12:34:07     INFO - GECKO(1565) | #03: mozilla::net::DocumentLoadListener::OpenDocument(nsDocShellLoadState*, unsigned int, mozilla::Maybe<unsigned long> const&, mozilla::TimeStamp const&, nsDOMNavigationTiming*, mozilla::Maybe<mozilla::dom::ClientInfo>&&, mozilla::Maybe<bool>, mozilla::Maybe<bool>, mozilla::dom::ContentParent*, nsresult*) [netwerk/ipc/DocumentLoadListener.cpp:933]
[task 2023-01-24T12:34:07.301Z] 12:34:07     INFO - GECKO(1565) | #04: mozilla::net::DocumentChannelParent::Init(mozilla::dom::CanonicalBrowsingContext*, mozilla::net::DocumentChannelCreationArgs const&) [netwerk/ipc/DocumentChannelParent.cpp:69]
[task 2023-01-24T12:34:07.301Z] 12:34:07     INFO - GECKO(1565) | #05: mozilla::net::NeckoParent::RecvPDocumentChannelConstructor(mozilla::net::PDocumentChannelParent*, mozilla::dom::MaybeDiscarded<mozilla::dom::BrowsingContext> const&, mozilla::net::DocumentChannelCreationArgs const&) [netwerk/ipc/NeckoParent.cpp:286]
[task 2023-01-24T12:34:07.302Z] 12:34:07     INFO - GECKO(1565) | #06: mozilla::net::PNeckoParent::OnMessageReceived(IPC::Message const&) [s3:gecko-generated-sources:fac2f5d6dec81607841151b70bfa60d6f378d7bcfc1697a2d36b748fd1aa428997868daea6c0b0ac0ebf0574060ecde8099dc40de27245555c60c4a6dab274aa/ipc/ipdl/PNeckoParent.cpp::0]
[task 2023-01-24T12:34:07.302Z] 12:34:07     INFO - GECKO(1565) | #07: mozilla::dom::PContentParent::OnMessageReceived(IPC::Message const&) [s3:gecko-generated-sources:f021777dbdd76fc8d27f4209bb6b0a601ccd1d5e631a40eb964d87ba128e04a13fbf6771b9b4a89d6b34442c763c8e5c97df501c5d82d4d6a0dda8b25c2504c5/ipc/ipdl/PContentParent.cpp::6686]
[task 2023-01-24T12:34:07.309Z] 12:34:07     INFO - GECKO(1565) | #08: mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy*, IPC::Message const&) [ipc/glue/MessageChannel.cpp:1800]
[task 2023-01-24T12:34:07.310Z] 12:34:07     INFO - GECKO(1565) | #09: mozilla::ipc::MessageChannel::DispatchMessage(mozilla::ipc::ActorLifecycleProxy*, mozilla::UniquePtr<IPC::Message, mozilla::DefaultDelete<IPC::Message> >) [ipc/glue/MessageChannel.cpp:1728]
[task 2023-01-24T12:34:07.310Z] 12:34:07     INFO - GECKO(1565) | #10: mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::ActorLifecycleProxy*, mozilla::ipc::MessageChannel::MessageTask&) [ipc/glue/MessageChannel.cpp:1525]
[task 2023-01-24T12:34:07.311Z] 12:34:07     INFO - GECKO(1565) | #11: mozilla::ipc::MessageChannel::MessageTask::Run() [ipc/glue/MessageChannel.cpp:1632]
[task 2023-01-24T12:34:07.311Z] 12:34:07     INFO - GECKO(1565) | #12: mozilla::RunnableTask::Run() [xpcom/threads/TaskController.cpp:540]
[task 2023-01-24T12:34:07.311Z] 12:34:07     INFO - GECKO(1565) | #13: mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) [xpcom/threads/TaskController.cpp:852]
[task 2023-01-24T12:34:07.312Z] 12:34:07     INFO - GECKO(1565) | #14: mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) [xpcom/threads/TaskController.cpp:0]
[task 2023-01-24T12:34:07.312Z] 12:34:07     INFO - GECKO(1565) | #15: mozilla::TaskController::ProcessPendingMTTask(bool) [xpcom/threads/TaskController.cpp:462]
[task 2023-01-24T12:34:07.313Z] 12:34:07     INFO - GECKO(1565) | #16: mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_2>::Run() [xpcom/threads/nsThreadUtils.h:547]
[task 2023-01-24T12:34:07.313Z] 12:34:07     INFO - GECKO(1565) | #17: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1201]
[task 2023-01-24T12:34:07.314Z] 12:34:07     INFO - GECKO(1565) | #18: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:477]
[task 2023-01-24T12:34:07.314Z] 12:34:07     INFO - GECKO(1565) | #19: mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:86]
[task 2023-01-24T12:34:07.314Z] 12:34:07     INFO - GECKO(1565) | #20: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:0]
[task 2023-01-24T12:34:07.315Z] 12:34:07     INFO - GECKO(1565) | #21: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:357]
[task 2023-01-24T12:34:07.315Z] 12:34:07     INFO - GECKO(1565) | #22: nsBaseAppShell::Run() [widget/nsBaseAppShell.cpp:150]
[task 2023-01-24T12:34:07.315Z] 12:34:07     INFO - GECKO(1565) | #23: nsAppStartup::Run() [toolkit/components/startup/nsAppStartup.cpp:296]
[task 2023-01-24T12:34:07.316Z] 12:34:07     INFO - GECKO(1565) | #24: XREMain::XRE_mainRun() [toolkit/xre/nsAppRunner.cpp:5641]
[task 2023-01-24T12:34:07.316Z] 12:34:07     INFO - GECKO(1565) | #25: XREMain::XRE_main(int, char**, mozilla::BootstrapConfig const&) [toolkit/xre/nsAppRunner.cpp:5834]
[task 2023-01-24T12:34:07.317Z] 12:34:07     INFO - GECKO(1565) | #26: XRE_main(int, char**, mozilla::BootstrapConfig const&) [toolkit/xre/nsAppRunner.cpp:5890]
[task 2023-01-24T12:34:07.317Z] 12:34:07     INFO - GECKO(1565) | #27: ??? [/builds/worker/workspace/build/application/firefox/firefox + 0x47526]
[task 2023-01-24T12:34:07.317Z] 12:34:07     INFO - GECKO(1565) | #28: __libc_start_main [/lib/x86_64-linux-gnu/libc.so.6 + 0x21b97]
[task 2023-01-24T12:34:07.317Z] 12:34:07     INFO - GECKO(1565) | #29: ??? [/builds/worker/workspace/build/application/firefox/firefox + 0x470d9]
[task 2023-01-24T12:34:07.318Z] 12:34:07     INFO - GECKO(1565) | #30: ??? (???:???)
[task 2023-01-24T12:34:07.318Z] 12:34:07     INFO - GECKO(1565) | ExceptionHandler::GenerateDump cloned child 2064
[task 2023-01-24T12:34:07.318Z] 12:34:07     INFO - GECKO(1565) | ExceptionHandler::SendContinueSignalToChild sent continue signal to child
[task 2023-01-24T12:34:07.319Z] 12:34:07     INFO - GECKO(1565) | ExceptionHandler::WaitForContinueSignal waiting for continue signal...
[task 2023-01-24T12:34:07.319Z] 12:34:07     INFO - GECKO(1565) | [Child 1774, IPC I/O Child] WARNING: [94FB660EE80B7E57.D8E1955FC4DCB991]:
<...>
INFO - GECKO(1565) | [Child 2046, IPC I/O Child] WARNING: [738FA971844C7E2B.1744C7F379C61444]: Ignoring message 'EVENT_MESSAGE' to peer 1.1 due to a missing broker: file /builds/worker/checkouts/gecko/ipc/glue/NodeController.cpp:352
[task 2023-01-24T12:34:07.347Z] 12:34:07     INFO - GECKO(1565) | [Child 2046, IPC I/O Child] WARNING: [738FA971844C7E2B.1744C7F379C61444]: Ignoring message 'EVENT_MESSAGE' to peer 1.1 due to a missing broker: file /builds/worker/checkouts/gecko/ipc/glue/NodeController.cpp:352
[task 2023-01-24T12:34:07.347Z] 12:34:07     INFO - GECKO(1565) | Exiting due to channel error.
[task 2023-01-24T12:34:07.348Z] 12:34:07     INFO - TEST-INFO | Main app process: exit 11
[task 2023-01-24T12:34:07.348Z] 12:34:07     INFO - Buffered messages finished
[task 2023-01-24T12:34:07.349Z] 12:34:07    ERROR - TEST-UNEXPECTED-FAIL | docshell/test/navigation/test_bug1758664.html | application terminated with exit code 11
[task 2023-01-24T12:34:07.350Z] 12:34:07     INFO - runtests.py | Application ran for: 0:01:08.229640
<...>
INFO - mozcrash Saved app info as /builds/worker/workspace/build/blobber_upload_dir/2ca5414e-8b67-9d1e-da44-33634e902e12.extra
[task 2023-01-24T12:34:12.397Z] 12:34:12     INFO - PROCESS-CRASH | docshell/test/navigation/test_bug1758664.html | application crashed [@ mozilla::dom::CanonicalBrowsingContext::CreateLoadingSessionHistoryEntryForLoad(nsDocShellLoadState*, mozilla::dom::SessionHistoryEntry*, nsIChannel*)]
[task 2023-01-24T12:34:12.398Z] 12:34:12     INFO - Mozilla crash reason: MOZ_ASSERT(!existingEntry == !existingLoadingInfo)
[task 2023-01-24T12:34:12.398Z] 12:34:12     INFO - Crash dump filename: /tmp/tmph2flfrwb.mozrunner/minidumps/2ca5414e-8b67-9d1e-da44-33634e902e12.dmp
[task 2023-01-24T12:34:12.399Z] 12:34:12     INFO - Operating system: Linux
[task 2023-01-24T12:34:12.399Z] 12:34:12     INFO -                   4.4.0-1014-aws #14taskcluster1-Ubuntu SMP Tue Apr 3 10:27:00 UTC 2018
[task 2023-01-24T12:34:12.400Z] 12:34:12     INFO - CPU: amd64
[task 2023-01-24T12:34:12.400Z] 12:34:12     INFO -      family 6 model 85 stepping 7
[task 2023-01-24T12:34:12.401Z] 12:34:12     INFO -      2 CPUs
[task 2023-01-24T12:34:12.401Z] 12:34:12     INFO - Linux Ubuntu 18.04 - bionic (Ubuntu 18.04.6 LTS)
[task 2023-01-24T12:34:12.401Z] 12:34:12     INFO - 
[task 2023-01-24T12:34:12.402Z] 12:34:12     INFO - Crash reason:  SIGSEGV / SEGV_MAPERR
[task 2023-01-24T12:34:12.402Z] 12:34:12     INFO - Crash address: 0x0
[task 2023-01-24T12:34:12.402Z] 12:34:12     INFO - Crashing instruction: `mov dword [0x0], 0x238`
[task 2023-01-24T12:34:12.402Z] 12:34:12     INFO - Memory accessed by instruction:
[task 2023-01-24T12:34:12.403Z] 12:34:12     INFO -   0. Address: 0x0000000000000000
[task 2023-01-24T12:34:12.403Z] 12:34:12     INFO -      Size: 4
[task 2023-01-24T12:34:12.403Z] 12:34:12     INFO - Process uptime: not available
[task 2023-01-24T12:34:12.404Z] 12:34:12     INFO - 
[task 2023-01-24T12:34:12.404Z] 12:34:12     INFO - Thread 0 firefox-bin (crashed)
[task 2023-01-24T12:34:12.404Z] 12:34:12     INFO -  0  libxul.so!mozilla::dom::CanonicalBrowsingContext::CreateLoadingSessionHistoryEntryForLoad(nsDocShellLoadState*, mozilla::dom::SessionHistoryEntry*, nsIChannel*) [CanonicalBrowsingContext.cpp:d7f27aa402602f948ad876fdf984005f32c6a051 : 568 + 0x0]
[task 2023-01-24T12:34:12.405Z] 12:34:12     INFO -      rax = 0x00007fb2b3274032    rdx = 0x0000000000000000
[task 2023-01-24T12:34:12.405Z] 12:34:12     INFO -      rcx = 0x00005646ae358d08    rbx = 0x0000000000000000
[task 2023-01-24T12:34:12.405Z] 12:34:12     INFO -      rsi = 0x00007fb2c809a8b0    rdi = 0x00007fb2c8099680
[task 2023-01-24T12:34:12.405Z] 12:34:12     INFO -      rbp = 0x00007ffd68bf99f0    rsp = 0x00007ffd68bf99a0
[task 2023-01-24T12:34:12.406Z] 12:34:12     INFO -       r8 = 0x00007fb2c809a8b0     r9 = 0x00007fb2c9002780
[task 2023-01-24T12:34:12.406Z] 12:34:12     INFO -      r10 = 0x0000000000000000    r11 = 0x0000000000000000
[task 2023-01-24T12:34:12.406Z] 12:34:12     INFO -      r12 = 0x00007fb276df13a0    r13 = 0x00007ffd68bf9c80
[task 2023-01-24T12:34:12.407Z] 12:34:12     INFO -      r14 = 0x00007fb2662cf080    r15 = 0x00007ffd68bf9b00
[task 2023-01-24T12:34:12.407Z] 12:34:12     INFO -      rip = 0x00007fb2bace435c
[task 2023-01-24T12:34:12.408Z] 12:34:12     INFO -     Found by: given as instruction pointer in context
[task 2023-01-24T12:34:12.408Z] 12:34:12     INFO -  1  libxul.so!mozilla::net::DocumentLoadListener::Open(nsDocShellLoadState*, mozilla::net::LoadInfo*, unsigned int, unsigned int, mozilla::Maybe<unsigned long> const&, mozilla::TimeStamp const&, nsDOMNavigationTiming*, mozilla::Maybe<mozilla::dom::ClientInfo>&&, bool, mozilla::dom::ContentParent*, nsresult*) [DocumentLoadListener.cpp:d7f27aa402602f948ad876fdf984005f32c6a051 : 723 + 0x11]
[task 2023-01-24T12:34:12.409Z] 12:34:12     INFO -      rbx = 0x000000006fcb9a01    rbp = 0x00007ffd68bf9b40
[task 2023-01-24T12:34:12.409Z] 12:34:12     INFO -      rsp = 0x00007ffd68bf9a00    r12 = 0x00007fb26aae0760
[task 2023-01-24T12:34:12.409Z] 12:34:12     INFO -      r13 = 0x00007ffd68bf9c80    r14 = 0x00007fb2662cf080
[task 2023-01-24T12:34:12.409Z] 12:34:12     INFO -      r15 = 0x00007ffd68bf9b00    rip = 0x00007fb2b6f730fe
[task 2023-01-24T12:34:12.410Z] 12:34:12     INFO -     Found by: call frame info
[task 2023-01-24T12:34:12.410Z] 12:34:12     INFO -  2  libxul.so!mozilla::net::DocumentLoadListener::OpenDocument(nsDocShellLoadState*, unsigned int, mozilla::Maybe<unsigned long> const&, mozilla::TimeStamp const&, nsDOMNavigationTiming*, mozilla::Maybe<mozilla::dom::ClientInfo>&&, mozilla::Maybe<bool>, mozilla::Maybe<bool>, mozilla::dom::ContentParent*, nsresult*) [DocumentLoadListener.cpp:d7f27aa402602f948ad876fdf984005f32c6a051 : 933 + 0x2e]
[task 2023-01-24T12:34:12.411Z] 12:34:12     INFO -      rbx = 0x00007fb292996200    rbp = 0x00007ffd68bf9c00
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → INCOMPLETE
Status: RESOLVED → REOPENED
Resolution: INCOMPLETE → ---

Peter, this looks like a regression from bug 1804803.

Severity: S4 → --
Component: Networking → DOM: Navigation
Flags: needinfo?(peterv)
Priority: P5 → --
Status: REOPENED → NEW
Regressed by: 1804803

Set release status flags based on info from the regressing bug 1804803

Assignee: nobody → peterv
Status: NEW → ASSIGNED
Pushed by pvanderbeken@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2b1811ccd618 Intermittent Assertion failure: !existingEntry == !existingLoadingInfo, at /builds/worker/checkouts/gecko/docshell/base/CanonicalBrowsingContext.cpp:568. r=farre
Status: ASSIGNED → RESOLVED
Closed: 3 years ago3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 112 Branch
Flags: needinfo?(peterv)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: