Bug 1812033 - Intermittent Assertion failure: !existingEntry == !existingLoadingInfo, at /builds/worker/checkouts/gecko/docshell/base/CanonicalBrowsingContext.cpp:568. r=farre

Differential Revision: https://phabricator.services.mozilla.com/D171090